src/objects/SSC_ScoringGuide__c.object
<CustomObject>
    <fields>
        <fullName>Caption__c</fullName>
        <label>Caption</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ColorGrade__c</fullName>
        <label>Color Grade</label>
        <picklist>
            <picklistValues>
                <fullName>Red</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Green</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yellow</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Max__c</fullName>
        <label>Max</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Min__c</fullName>
        <label>Min</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Scoring_Guide__c</fullName>
        <label>Scoring Guide</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>DateTime</type>
    </fields>
    <label>Supplier Scoring Guide</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Caption__c</columns>
        <columns>ColorGrade__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Max__c</columns>
        <columns>Min__c</columns>
        <columns>Scoring_Guide__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Scorecard Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Supplier Scoring Guide</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>